added basic layout and styling as per the mockups

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,8 +1,8 @@
 {
   "play": "PLAY",
   "betType": {
-    "rock": "ROCK",
-    "paper": "PAPER",
-    "scissor": "SCISSOR"
+    "rock": "Rock 🪨",
+    "paper": "Paper 📄",
+    "scissor": "Scissor ✂️"
   }
 }
