setup basic bet placing logic and constraints

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,9 @@
 {
+  "balance": "BALANCE",
+  "bet": "BET",
+  "win": "WIN",
   "play": "PLAY",
+  "placeYourBets": "Place your bets",
   "betType": {
     "rock": "Rock 🪨",
     "paper": "Paper 📄",
