setup basic game logic with win loss and draw calculation

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,6 +4,7 @@
   "win": "WIN",
   "play": "PLAY",
   "placeYourBets": "Place your bets",
+  "pickYourPositions": "Pick your positions",
   "betType": {
     "rock": "Rock 🪨",
     "paper": "Paper 📄",
