polished game with animations and optimizations to performance and making it responsive

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,10 +1,18 @@
 {
-  "balance": "BALANCE",
-  "bet": "BET",
-  "win": "WIN",
-  "play": "PLAY",
+  "balance": "Balance",
+  "bet": "Bet",
+  "win": "Win",
+  "play": "Play",
+  "playAgain": "Play again",
   "placeYourBets": "Place your bets",
   "pickYourPositions": "Pick your positions",
+  "drawWith": "Draw with",
+  "won": "won",
+  "computer": "Computer",
+  "you": "You",
+  "vs": "VS",
+  "insufficientBalance": "Insufficient balance!",
+  "bettingPositionsLimitCrossed": "You cannot bet on more than two positions at once!",
   "betType": {
     "rock": "Rock 🪨",
     "paper": "Paper 📄",
